# RadarSim_NumericalApproximation

./: .gitignore  README.md  __init__.py  land_loader.py  pipeline.py  pyproject.toml
config/: annotation_scene.yaml  default.yaml  demo_rcs_comparison.yaml  demo_speed_comparison.yaml  example_scene.yaml  land_frames_scene.yaml
core/: __init__.py  annotations.py  colormap.py  converter.py  csv_handler.py  mask.py
models/: __init__.py  clutter.py  land.py  propagation.py  targets.py
output/: __init__.py  csv_writer.py  image_renderer.py
radar/: __init__.py  config.py  waveform.py
scene/: __init__.py  adapter.py  config.py  expressions.py  intensity.py  motion.py
